--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">example</string>
+    <string name="enter_your_credentials">Enter your credentials</string>
+    <string name="phone_number">Phone Number</string>
 </resources>
