--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">example</string>
+    <string name="enter_your_credentials">Enter your credentials</string>
 
     <string-array name="stations">
         <item>Select Station</item>
